Spongebob_squarepants/target/generated-sources/antlr4/Spongebob_SquarepantsParser.java
// Generated from Spongebob_Squarepants.g4 by ANTLR 4.4

	#include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Spongebob_SquarepantsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, BIKINIBOTTOM=20, IMAGOODNOODLE=21, ANETERNITYLATER=22, 
		GOODBYEFRIEND=23, FISFORFRIENDS=24, FISFORFIRE=25, RAVIOLIRAVIOLIGIVEME=26, 
		THEFORMULOLI=27, IMREADYPROMOTION=28, ORDERUP=29, YOUFORGOTTHEPICKLES=30, 
		DOODLEBOB=31, IMMAGOOFYGOOBER=32, OR=33, AND=34, TBUN=35, BBUN=36, STARFISH=37, 
		IDENTIFIER=38, BUBBLEBUDDY=39, SPONGEBOB=40, QUOTE=41, PLANKTON=42, SQUIDWARD=43, 
		MAGICCONCH=44, IMAGINATION=45;
	public static final String[] tokenNames = {
		"<INVALID>", "'aye aye captain'", "'MONEY'", "'!='", "'>='", "'['", "'<'", 
		"'=='", "']'", "'>'", "'<='", "'!'", "'ME MONEY'", "'I will destroy all of you!'", 
		"'I went to college!'", "'is'", "'+'", "','", "'-'", "'.'", "BIKINIBOTTOM", 
		"IMAGOODNOODLE", "ANETERNITYLATER", "GOODBYEFRIEND", "FISFORFRIENDS", 
		"FISFORFIRE", "RAVIOLIRAVIOLIGIVEME", "THEFORMULOLI", "IMREADYPROMOTION", 
		"ORDERUP", "YOUFORGOTTHEPICKLES", "DOODLEBOB", "IMMAGOOFYGOOBER", "OR", 
		"AND", "'('", "')'", "'*'", "IDENTIFIER", "BUBBLEBUDDY", "SPONGEBOB", 
		"'''", "PLANKTON", "SQUIDWARD", "MAGICCONCH", "IMAGINATION"
	};
	public static final int
		RULE_program = 0, RULE_programHeader = 1, RULE_block = 2, RULE_declarations = 3, 
		RULE_constantsPart = 4, RULE_constantDefinitionList = 5, RULE_constantDefinition = 6, 
		RULE_constantIdentifier = 7, RULE_constant = 8, RULE_sign = 9, RULE_variablesPart = 10, 
		RULE_variableDeclarationList = 11, RULE_variableDeclarations = 12, RULE_variableIdentifierList = 13, 
		RULE_variableIdentifier = 14, RULE_typeSpecification = 15, RULE_simpleType = 16, 
		RULE_typeIdentifier = 17, RULE_statement = 18, RULE_compoundStatement = 19, 
		RULE_emptyStatement = 20, RULE_statementlist = 21, RULE_assignmentStatement = 22, 
		RULE_lhs = 23, RULE_rhs = 24, RULE_ifStatement = 25, RULE_truestatement = 26, 
		RULE_falsestatement = 27, RULE_whileStatement = 28, RULE_writeStatement = 29, 
		RULE_writelnStatement = 30, RULE_writeArguments = 31, RULE_writeArgument = 32, 
		RULE_expression = 33, RULE_simpleExpression = 34, RULE_term = 35, RULE_factor = 36, 
		RULE_variable = 37, RULE_modifier = 38, RULE_indexList = 39, RULE_index = 40, 
		RULE_field = 41, RULE_number = 42, RULE_unsignedNumber = 43, RULE_integerConstant = 44, 
		RULE_realConstant = 45, RULE_characterConstant = 46, RULE_stringConstant = 47, 
		RULE_relOp = 48, RULE_addOp = 49, RULE_mulOp = 50;
	public static final String[] ruleNames = {
		"program", "programHeader", "block", "declarations", "constantsPart", 
		"constantDefinitionList", "constantDefinition", "constantIdentifier", 
		"constant", "sign", "variablesPart", "variableDeclarationList", "variableDeclarations", 
		"variableIdentifierList", "variableIdentifier", "typeSpecification", "simpleType", 
		"typeIdentifier", "statement", "compoundStatement", "emptyStatement", 
		"statementlist", "assignmentStatement", "lhs", "rhs", "ifStatement", "truestatement", 
		"falsestatement", "whileStatement", "writeStatement", "writelnStatement", 
		"writeArguments", "writeArgument", "expression", "simpleExpression", "term", 
		"factor", "variable", "modifier", "indexList", "index", "field", "number", 
		"unsignedNumber", "integerConstant", "realConstant", "characterConstant", 
		"stringConstant", "relOp", "addOp", "mulOp"
	};

	@Override
	public String getGrammarFileName() { return "Spongebob_Squarepants.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Spongebob_SquarepantsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeaderContext programHeader() {
			return getRuleContext(ProgramHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); programHeader();
			setState(103); block();
			setState(104); match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeaderContext extends ParserRuleContext {
		public TerminalNode BIKINIBOTTOM() { return getToken(Spongebob_SquarepantsParser.BIKINIBOTTOM, 0); }
		public ProgramHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterProgramHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitProgramHeader(this);
		}
	}

	public final ProgramHeaderContext programHeader() throws RecognitionException {
		ProgramHeaderContext _localctx = new ProgramHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(BIKINIBOTTOM);
			setState(107); match(T__18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); declarations();
			setState(110); compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public VariablesPartContext variablesPart() {
			return getRuleContext(VariablesPartContext.class,0);
		}
		public ConstantsPartContext constantsPart() {
			return getRuleContext(ConstantsPartContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if (_la==IMAGOODNOODLE) {
				{
				setState(112); constantsPart();
				setState(113); match(T__18);
				}
			}

			setState(120);
			_la = _input.LA(1);
			if (_la==IMMAGOOFYGOOBER) {
				{
				setState(117); variablesPart();
				setState(118); match(T__18);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantsPartContext extends ParserRuleContext {
		public ConstantDefinitionListContext constantDefinitionList() {
			return getRuleContext(ConstantDefinitionListContext.class,0);
		}
		public TerminalNode IMAGOODNOODLE() { return getToken(Spongebob_SquarepantsParser.IMAGOODNOODLE, 0); }
		public ConstantsPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantsPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterConstantsPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitConstantsPart(this);
		}
	}

	public final ConstantsPartContext constantsPart() throws RecognitionException {
		ConstantsPartContext _localctx = new ConstantsPartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constantsPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(IMAGOODNOODLE);
			setState(123); constantDefinitionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionListContext extends ParserRuleContext {
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public ConstantDefinitionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinitionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterConstantDefinitionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitConstantDefinitionList(this);
		}
	}

	public final ConstantDefinitionListContext constantDefinitionList() throws RecognitionException {
		ConstantDefinitionListContext _localctx = new ConstantDefinitionListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constantDefinitionList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125); constantDefinition();
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126); match(T__18);
					setState(127); constantDefinition();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public ConstantIdentifierContext constantIdentifier() {
			return getRuleContext(ConstantIdentifierContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterConstantDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitConstantDefinition(this);
		}
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constantDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); constantIdentifier();
			setState(134); match(T__4);
			setState(135); constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantIdentifierContext extends ParserRuleContext {
		public Typespec * type;
		public SymtabEntry * entry;
		public TerminalNode IDENTIFIER() { return getToken(Spongebob_SquarepantsParser.IDENTIFIER, 0); }
		public ConstantIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterConstantIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitConstantIdentifier(this);
		}
	}

	public final ConstantIdentifierContext constantIdentifier() throws RecognitionException {
		ConstantIdentifierContext _localctx = new ConstantIdentifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constantIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Typespec * type;
		public Object value;
		public UnsignedNumberContext unsignedNumber() {
			return getRuleContext(UnsignedNumberContext.class,0);
		}
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(Spongebob_SquarepantsParser.IDENTIFIER, 0); }
		public StringConstantContext stringConstant() {
			return getRuleContext(StringConstantContext.class,0);
		}
		public CharacterConstantContext characterConstant() {
			return getRuleContext(CharacterConstantContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constant);
		int _la;
		try {
			setState(148);
			switch (_input.LA(1)) {
			case T__3:
			case T__1:
			case IDENTIFIER:
			case BUBBLEBUDDY:
			case SPONGEBOB:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				_la = _input.LA(1);
				if (_la==T__3 || _la==T__1) {
					{
					setState(139); sign();
					}
				}

				setState(144);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(142); match(IDENTIFIER);
					}
					break;
				case BUBBLEBUDDY:
				case SPONGEBOB:
					{
					setState(143); unsignedNumber();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case PLANKTON:
				enterOuterAlt(_localctx, 2);
				{
				setState(146); characterConstant();
				}
				break;
			case SQUIDWARD:
				enterOuterAlt(_localctx, 3);
				{
				setState(147); stringConstant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitSign(this);
		}
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesPartContext extends ParserRuleContext {
		public TerminalNode IMMAGOOFYGOOBER() { return getToken(Spongebob_SquarepantsParser.IMMAGOOFYGOOBER, 0); }
		public VariableDeclarationListContext variableDeclarationList() {
			return getRuleContext(VariableDeclarationListContext.class,0);
		}
		public VariablesPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterVariablesPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitVariablesPart(this);
		}
	}

	public final VariablesPartContext variablesPart() throws RecognitionException {
		VariablesPartContext _localctx = new VariablesPartContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variablesPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(IMMAGOOFYGOOBER);
			setState(153); variableDeclarationList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationListContext extends ParserRuleContext {
		public List<VariableDeclarationsContext> variableDeclarations() {
			return getRuleContexts(VariableDeclarationsContext.class);
		}
		public VariableDeclarationsContext variableDeclarations(int i) {
			return getRuleContext(VariableDeclarationsContext.class,i);
		}
		public VariableDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterVariableDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitVariableDeclarationList(this);
		}
	}

	public final VariableDeclarationListContext variableDeclarationList() throws RecognitionException {
		VariableDeclarationListContext _localctx = new VariableDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variableDeclarationList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155); variableDeclarations();
			setState(160);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(156); match(T__18);
					setState(157); variableDeclarations();
					}
					} 
				}
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationsContext extends ParserRuleContext {
		public TypeSpecificationContext typeSpecification() {
			return getRuleContext(TypeSpecificationContext.class,0);
		}
		public VariableIdentifierListContext variableIdentifierList() {
			return getRuleContext(VariableIdentifierListContext.class,0);
		}
		public VariableDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).enterVariableDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Spongebob_SquarepantsListener ) ((Spongebob_SquarepantsListener)listener).exitVariableDeclarations(this);
		}
	}

	public final VariableDeclarationsContext variableDeclarations() throws RecognitionException {
		VariableDeclarationsContext _localctx = new VariableDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_variableDeclarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); variableIdentifierList();
			setState(164); match(T__4);
			setState(165); typeSpecification();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
